syntax = "proto3";

package genproto;

option go_package = "genproto/auth_service";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Verify (VerifyRequest) returns (VerifyResponse);
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message VerifyRequest {
  string email = 1;
  string code = 2;
}

message VerifyResponse {
  string message = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  string message = 1;
}