syntax = "proto3";

package genproto;

option go_package = "genproto/notification_service";

service NotificationService {
  rpc SendEmail(SendEmailRequest) returns (SendEmailResponse);
}

message SendEmailRequest {
  string to = 1;
  string type = 2;
  string subject = 3;
  map<string, string> body = 4;
}

message SendEmailResponse {
  string message = 1;
}